# Cmake-Project-Template

./: .gitignore  CMakeLists.txt  README.md
include/project_name/: example.h
src/: example.cpp  main.cpp
tests/: test_main.cpp
